--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     		<main class="test-card-body">
     			<div class="quote">
     				<i class="fa fa-quote-left"></i>
-    				<h2>Supper Helpful</h2>
+    				<h2>Super Helpful</h2>
     			</div>
     			<p>Pete's been super helpful and supportive whilst we volunteers at church have been getting to grips with ExpensePlus. Because our Treasurer passed away so suddenly, it's been a real challenge to get a team together and move to an online accounting system, but Pete helped assimilate all our previous year's data with his Migration Package. I've found him super-speedy with responding to my email queries - I mean, in minutes, often! So glad that we've opted for his SupportPlus Package where he'll continue to be on hand for as long as we need. Plus, he'll do a weekly check-up to make sure everything's still looking ok on ExpensePlus. Perfect!!</p>
     			<div class="ratings">
@@ -237,9 +237,9 @@
     		<main class="test-card-body">
     			<div class="quote">
     				<i class="fa fa-quote-left"></i>
-    				<h2>Such Fantastic Support</h2>
+    				<h2>I wish we had taken on Pete years ago.</h2>
     			</div>
-    			<p>Pete has been such a fantastic support as we have transitioned onto ExpensePlus and he has taken on our bookkeeping. We have the Migration & BookkeegingPlus Packages and I can honestly say, we would be tearing our hair out without Pete. The level of service and speed of response has been excellent. He creates fantastic videos for training and for explaining changes he has made. He has taken the time to thoroughly understand how we operate and to ensure that he supports the whole team as we learn this new system. Pete has also provided so many additional ways of supporting us which I was not expecting. He is hugely encouraging, very patient and a pleasure to work with in addition to being very knowledgable. I wish we had taken on Pete years ago. If you are a charity and looking for a bookkeeper and package to use, I would strongly recommend Pete and ExpensePlus.</p>
+    			<p>Pete has been such a fantastic support as we have transitioned onto ExpensePlus and he has taken on our bookkeeping. We have the Migration & BookkeegingPlus Packages and I can honestly say, we would be tearing our hair out without Pete. He has taken the time to thoroughly understand how we operate and to ensure that he supports the whole team as we learn this new system. He is hugely encouraging, very patient and a pleasure to work with in addition to being very knowledgeable. I wish we had taken on Pete years ago.</p>
     			<div class="ratings">
     				<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
 			 	</div>
