--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     		<main class="test-card-body">
     			<div class="quote">
     				<i class="fa fa-quote-left"></i>
-    				<h2>I wish we had taken on Pete years ago.</h2>
+    				<h2>I wish we had taken on Pete years ago</h2>
     			</div>
     			<p>Pete has been such a fantastic support as we have transitioned onto ExpensePlus and he has taken on our bookkeeping. We have the Migration & BookkeegingPlus Packages and I can honestly say, we would be tearing our hair out without Pete. He has taken the time to thoroughly understand how we operate and to ensure that he supports the whole team as we learn this new system. He is hugely encouraging, very patient and a pleasure to work with in addition to being very knowledgeable. I wish we had taken on Pete years ago.</p>
     			<div class="ratings">
