--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -1,27 +1,43 @@
 <!DOCTYPE HTML>
 <!--
-	Spectral by HTML5 UP
+	Spectral by HTML5 UP.
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
---> 
+-->
 <html>
 	<head>
 		<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="2356d7d5-45ee-4c0a-8fa9-7bb0b0bf112b" data-blockingmode="auto" type="text/javascript"></script>
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-5RXMLG8W');</script>
-<!-- End Google Tag Manager -->
-</script>
-		<title>Training and Support</title>
+	  <!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-5RXMLG8W');</script>
+		<!-- End Google Tag Manager -->
+	</script>
+		<title>PD Marfleet Accounting</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../PDP-Website%20(Live)%20copy/assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+ <!-- *******  Owl Carousel Links  ******* -->
+		<!-- *******  Link To Custom CSS Style Sheet  ******* -->
+		<link rel="stylesheet" type="text/css" href="style.css">
+
+		<!-- *******  Font Awesome Icons Link  ******* -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
+	  
+		<!-- *******  Owl Carousel Links  ******* -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+	  
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"/>
+	  
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
+	   
 	<!-- Favicon -->
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+			<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
@@ -34,36 +50,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<meta property="og:url" content="https://pdmarfleet.co.uk">
 	<meta property="og:image" content="https://i.ibb.co/fNrxNqh/PD-MARFLEET-WEBSITE-THUMB.png">
 	<meta property="og:description" content="Providing cost-effective, outsourced bookkeeping services to charities and non-profits, along with advice, support and training packages for organisations seeking to upgrade their accounting processes.">
-</head>
+	</head>
 	<body class="landing is-preload">
 
-
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
-
 				<!-- Header -->
-					<header id="header">
-						<a href="../PDP-Website%20(Live)%20copy/index.html" class="image-link"><img src="images/pd-marfleet-charity-accounting%20and-bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
-						<nav id="nav">
+					<header id="header" class="alt">
+					<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<ul>
-												<li><a href="../PDP-Website%20(Live)%20copy/index.html">Home</a></li>
-												<li><a href="Bookkeeping.html">Bookkeeping</a></li>
-												<li><a href="training-support.html">Training & Support</a></li>
-												<li><a href="Resources.html">Resources</a></li>
-												<li><a href="contact.html">Contact</a></li>
-											</ul>
+											<li><a href="index.html">Home</a></li>
+											<li><a href="Bookkeeping.html">Bookkeeping</a></li>
+											<li><a href="Training-Support.html">Training & Support</a></li>
+											<li><a href="Resources.html">Resources</a></li>
+											<li><a href="Contact.html">Contact</a></li>
 										</ul>
 									</div>
 								</li>
 							</ul>
 						</nav>
 					</header>
-
 				<!-- Main -->
 					<article id="main">
 						<header>
