--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@
 								<p>I’m Pete Marfleet. I help charities streamline their finances.</p>
 								<img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
 								<p> My business provides cost-effective, outsourced bookkeeping services to charities, churches and non-profits, along with advice, support and training packages for organisations seeking to upgrade their accounting processes.</p>
-						
-						</header>
-								
+							</header>
 						</div>
 					</section>
 
@@ -151,9 +149,12 @@
 <!--testimonials styling-->
 <section id="three" class="wrapper alt style3">
 	<!-- Section Header Starts -->
+	<div class="inner">
+		<header class="major">
 		<h1>WHAT CLIENTS SAY</h1>
 		<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
-
+		</header>
+	</div>
 	<!-- Section Header Ends -->
 
 	<!-- Owl Carousel Slider Starts -->
