--- a/index.html
+++ b/index.html
@@ -147,15 +147,13 @@
 
 				
 <!--testimonials styling-->
-<section id="three" class="wrapper alt style3">
-	<div class="inner">
-		<header class="major">
-		<h1>WHAT CLIENTS SAY</h1>
+<section id="testimonials" style="margin-top:-200px; margin-bottom: 200px" class="wrapper alt style2">
+	<section class="spotlight">
+		<div class="content">
+			<h1>WHAT CLIENTS SAY</h1>
 		<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
-		</header>
-	</div>
-	<!-- Section Header Ends -->
-
+		</div>
+	</section>
 	<!-- Owl Carousel Slider Starts -->
 	<div class="owl-carousel owl-theme testimonials-container">
 		<!-- 1 - Liz Zambonini -->
