--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
 
 				
 <!--testimonials styling-->
-<section id="three" class="wrapper alt style3">
+<div class="testimonials-section">
+	
 	<!-- Section Header Starts -->
-	<div class="inner">
-							<header class="major">
-		<h1>WHAT CLIENTS SAY</h1>
+	<header class="section-header">
+		<h1>What Clients Say</h1>
 		<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
-
+	</header>
 	<!-- Section Header Ends -->
 
 	<!-- Owl Carousel Slider Starts -->
@@ -327,7 +327,8 @@
     		</div>
     	</div>
     	<!-- Item6 Ends -->
-</section>
+
+    </div>
 	<!-- Owl Carousel Slider Ends -->
 
 </div>
