--- a/index.html
+++ b/index.html
@@ -152,10 +152,15 @@
 <div class="testimonials-section">
 	
 	<!-- Section Header Starts -->
-	<header class="section-header">
-		<h1>What Clients Say</h1>
-		<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
-	</header>
+	<section id="AboutMe" style="margin-top:-200px; margin-bottom: 200px" class="wrapper alt style2">
+		<section class="spotlight">
+			<div class="content">
+				<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
+			<h1>What Clients Say</h1>
+			<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
+			</div>
+		</section>
+	</section>
 	<!-- Section Header Ends -->
 
 	<!-- Owl Carousel Slider Starts -->
