--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <div class="testimonials-section">
 	
 	<!-- Section Header Starts -->
-	<section id="AboutMe" style="margin-top:-200px; margin-bottom: 200px" class="wrapper alt style2">
+	<section id="AboutMe" class="wrapper alt style2">
 		<section class="spotlight">
 			<div class="content">
 				<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
