--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <div class="testimonials-section">
 	
 	<!-- Section Header Starts -->
-	<section id="one" style="background-color: #218ea6!important;">
+	<section id="one" class="wrapper alt style2" style="background-color: #218ea6!important;">
 		<div class="inner">
 			<header class="major">
 			<h2>What Clients Say</h2>
