--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
 
 				
 <!--testimonials styling-->
-<div class="testimonials-section">
-	
+
 	<!-- Section Header Starts -->
-	<section id="one" class="wrapper alt style2" style="background-color: #218ea6!important;">
+
+	<section id="one" class="wrapper style1 special" style="background-color: #218ea6!important;">
 		<div class="inner">
 			<header class="major">
 			<h2>What Clients Say</h2>
@@ -161,7 +161,7 @@
 		</div>
 	</section>
 	<!-- Section Header Ends -->
-
+	<div class="testimonials-section">
 	<!-- Owl Carousel Slider Starts -->
 	<div class="owl-carousel owl-theme testimonials-container">
 		<!-- 1 - Liz Zambonini -->
