--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	<section id="one" class="wrapper style1 special" style="background-color: #218ea6!important;">
 		<div class="inner">
 			<header class="major">
-			<h2>What Clients Say</h2>
+			<h2 style="text-transform: uppercase;">What Clients Say</h2>
 			<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
 			</header>
 		</div>
