--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 					<div class="quote">
 						<i class="fa fa-quote-left"></i>
 						<h2>Highly Recommended</h2>
+						<i class="fa fa-quote-right"></i>
 					</div>
 					<p>"I would highly recommend PD Marfleet accounting. Not only is he super helpful and patient, but he is also highly skilled in ExpensePlus and understands working with charities. He moved all our accounts onto ExpensePlus and set everything up so that it was easy to use. He also trained us in how to use the new system so that we could capture our information. He manages our monthly accounts in such a way that has saved myself and the team so much time and it makes our annual review with the accountants and auditors a breeze! Over all the years I have worked in the charity sector I have never found managing the financial side as easy as Pete has made it!"</p>
 					<div class="ratings">
