--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		<div class="inner">
 			<header class="major">
 			<h2 style="text-transform: uppercase; color: white;">What Clients Say</h2>
-			<p style="font-size:.9em!important; margin-top:-.9em!important; color: white;"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
+			<p style="font-size:.9em!important; margin-top:-.9em!important; color: white!important;"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
 			</header>
 		</div>
 	</section>
