--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@
 						<h2>We're Delighted! </h2>
 					</div>
 					<p>We have been delighted at the work Pete has done for us. He made the move to using a new accounting system (ExpensePlus) very straightforward and has helped us at every stage. I highly recommend PD Marfleet Accounting for all your charity bookkeeping needs!</p>
+					<div class="quote">
+						<i class="fa fa-quote-right" style="margin-left: auto;"></i>
+					</div>
 					<div class="ratings">
 						<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
 					</div>
@@ -218,6 +221,9 @@
 						<h2>Super Helpful</h2>
 					</div>
 					<p>Pete's been super helpful and supportive whilst we volunteers at church have been getting to grips with ExpensePlus. Because our Treasurer passed away so suddenly, it's been a real challenge to get a team together and move to an online accounting system, but Pete helped assimilate all our previous year's data with his Migration Package. I've found him super-speedy with responding to my email queries - I mean, in minutes, often! So glad that we've opted for his SupportPlus Package where he'll continue to be on hand for as long as we need. Plus, he'll do a weekly check-up to make sure everything's still looking ok on ExpensePlus. Perfect!!</p>
+					<div class="quote">
+						<i class="fa fa-quote-right" style="margin-left: auto;"></i>
+					</div>
 					<div class="ratings">
 						<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
 					</div>
@@ -242,6 +248,9 @@
 						<h2>I wish we had taken on Pete years ago</h2>
 					</div>
 					<p>Pete has been such a fantastic support as we have transitioned onto ExpensePlus and he has taken on our bookkeeping. We have the Migration & BookkeegingPlus Packages and I can honestly say, we would be tearing our hair out without Pete. He has taken the time to thoroughly understand how we operate and to ensure that he supports the whole team as we learn this new system. He is hugely encouraging, very patient and a pleasure to work with in addition to being very knowledgeable. I wish we had taken on Pete years ago.</p>
+					<div class="quote">
+						<i class="fa fa-quote-right" style="margin-left: auto;"></i>
+					</div>
 					<div class="ratings">
 						<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
 					</div>
@@ -266,6 +275,9 @@
 						<h2>Pete has been amazing!</h2>
 					</div>
 					<p>I'm the CEO of a UK based Charity operating across multiple nations. Pete has been amazing this year at reshaping and updating our accounting practices making them fit for purpose. I totally recommend both his skill and his integrity!</p>
+					<div class="quote">
+						<i class="fa fa-quote-right" style="margin-left: auto;"></i>
+					</div>
 					<div class="ratings">
 						<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
 					</div>
@@ -290,6 +302,9 @@
 						<h2>Excellent and Thorough</h2>
 					</div>
 					<p>Pete Marfleet has been great to work with. He did an excellent and thorough review of our bookkeeping and policies, as a charity needing to keep our procedures on track with our growth. He clearly has an excellent understanding of charity accounting with the added bonus of expertise in ExpensePlus, the specific package we use. He has given us both assurance about our financial management and some good suggestions for improvement. He combined direct and clear communication, timeliness and keeping us informed, with enthusiasm, friendliness, and the willingness to help out with small non-contracted bits of advice along the way. I highly recommend his services to anyone running a small to medium charity.</p>
+					<div class="quote">
+						<i class="fa fa-quote-right" style="margin-left: auto;"></i>
+					</div>
 					<div class="ratings">
 						<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
 					</div>
@@ -314,6 +329,9 @@
 						<h2>Pete's training is excellent!</h2>
 					</div>
 					<p>Pete has helped our church get setup on ExpensePlus with very little time before the start of a new financial year. We bought his Migration Package and SupportPlus Package which is great value and has been invaluable. Pete's training is excellent and he's very responsive to support calls. We are now in a much better place with our bookkeeping processes and Pete gently reminds us of things we should be doing that perhaps we weren't! I wouldn't hesitate to recommend his services.</p>
+					<div class="quote">
+						<i class="fa fa-quote-right" style="margin-left: auto;"></i>
+					</div>
 					<div class="ratings">
 						<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
 					</div>
