--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 				
 <!--testimonials styling-->
-	<section id="one" class="wrapper style1 special" style="background-color: #218ea6!important;">
+	<section id="reviews" class="wrapper style1 special" style="background-color: #218ea6!important;">
 		<div class="inner">
 			<header class="major">
 			<h2 style="text-transform: uppercase; color: white;">What Clients Say</h2>
