--- a/Training-Support.html
+++ b/Training-Support.html
@@ -234,7 +234,7 @@
 											<a class="close" href="#">&times;</a>
 											<a class="close topright" href="#">&times;</a>
 											<div class="content">
-												<p>If your are interested in moving to ExpensePlus, we will start with a free, no-obligation consultation via Zoom. This will enable me to learn more about you, your organisation, and your current accounting setup in greater depth.</p> 
+												<p>If you are interested in moving to ExpensePlus, we will start with a free, no-obligation consultation via Zoom. This will enable me to learn more about you, your organisation, and your current accounting setup in greater depth.</p> 
 												<p>Each organisation's migration to ExpensePlus is unique, so the fees I charge vary from the basic package price of £750, depending on your organisation's income. In addition, if your accounts require significantly more work than usual before they can be transferred to ExpensePlus, the package price could increase. However, if I think your accounts are simple to migrate or you are a very small organisation (income less than £50K), I may be able to offer a rate lower than the base price ranges listed below.</p>
 											<section id="Reviews" style="margin-top:-200px; margin-bottom: 250px">
 											</section>
