--- a/Getting-Charity-Appeals-Right-Download-Signup.html
+++ b/Getting-Charity-Appeals-Right-Download-Signup.html
@@ -129,7 +129,7 @@
 				<!-- Main -->
 			<article id="main">
 						<header>
-							<img src="images/Getting Charity Appeals Right - Your 3 Step Guide" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
+							<img src="images/Getting Charity Appeals Right - Your 3 Step Guide header image.png" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
 						</header>			
 							
 					
