--- a/Getting-Charity-Appeals-Right-Download-Signup.html
+++ b/Getting-Charity-Appeals-Right-Download-Signup.html
@@ -16,10 +16,12 @@
 		<!-- End Google Tag Manager -->
 	</script>
 
+<!--MailChimp signup form styling-->
+
 	<div id="mc_embed_shell">
 		<link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
 	<style type="text/css">
-		  #mc_embed_signup{background:#218ea6; false;clear:left; width: 600px;display: block;margin: auto;}
+		  #mc_embed_signup{background:#218ea6; false;clear:left; width: 650px;display: block;margin: auto;}
 		  #mc_embed_signup_scroll{margin: 25px;}
 		  #mc_embed_signup .mc-field-group.input-group input[type=checkbox] {
   position: absolute;
@@ -62,8 +64,6 @@
   display: inline-block;
   text-indent: 25px
 }
-
-
 
 		  /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 			 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
