--- a/Getting-Charity-Appeals-Right-Download-Signup.html
+++ b/Getting-Charity-Appeals-Right-Download-Signup.html
@@ -120,7 +120,7 @@
 											<li><a href="Training-Support.html">Training & Support</a></li>
 											<li><a href="Resources.html">Resources</a></li>
 											<li><a href="Contact.html">Contact</a></li>
-										</ul>
+										</ul>1
 									</div>
 								</li>
 							</ul>
@@ -129,7 +129,7 @@
 				<!-- Main -->
 			<article id="main">
 						<header>
-							<img src="images/Getting Charity Appeals Right - Your 3 Step Guide header image.png" style="border-radius: 1em; margin-bottom: 20px;" width="650px">
+							<img src="images/Getting Charity Appeals Right - Your 3 Step Guide header image.png" style="border-radius: 1em; margin-bottom: 20px;" width="650px" alt="Getting Charity Appeals Right - Your 3 Step Guide to Download">
 						</header>			
 							
 					
