--- a/Getting-Charity-Appeals-Right-Download.html
+++ b/Getting-Charity-Appeals-Right-Download.html
@@ -27,6 +27,9 @@
   position: absolute;
   opacity: 0;
 }
+#mc_embed_signup h2 {
+    padding: 30px!important;
+}
 #mc_embed_signup .mc-field-group.input-group input[type=checkbox] ~ label:before {
   content: '';
   position: absolute;
