--- a/Getting-Charity-Appeals-Right-Download.html
+++ b/Getting-Charity-Appeals-Right-Download.html
@@ -30,6 +30,11 @@
 #mc_embed_signup h2 {
     padding: 30px!important;
 }
+
+#mc_embed_signup .helper_text {
+	color: white;
+	background-color: none;
+}
 #mc_embed_signup .mc-field-group.input-group input[type=checkbox] ~ label:before {
   content: '';
   position: absolute;
