--- a/Getting-Charity-Appeals-Right-Download.html
+++ b/Getting-Charity-Appeals-Right-Download.html
@@ -33,7 +33,7 @@
 
 #mc_embed_signup .helper_text {
 	color: white;
-	background-color: none;
+	background: none;
 }
 #mc_embed_signup .mc-field-group.input-group input[type=checkbox] ~ label:before {
   content: '';
