--- a/Getting-Charity-Appeals-Right-Download.html
+++ b/Getting-Charity-Appeals-Right-Download.html
@@ -76,7 +76,8 @@
     color: rgb(255, 255, 255);
 }
 #mc_embed_signup_scroll p{
-	text-align: center!important;
+	text-align: center;
+	margin:1px;
 }
 
 		  /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
