--- a/Getting-Charity-Appeals-Right-Download.html
+++ b/Getting-Charity-Appeals-Right-Download.html
@@ -21,7 +21,7 @@
 	<div id="mc_embed_shell">
 		<link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
 	<style type="text/css">
-		  #mc_embed_signup{background:#218ea6; false;clear:left; width: 650px;display: block;margin: auto;}
+		  #mc_embed_signup{background:#218ea6; false;clear:left; width: 650px; max-width: 100%;display: block;margin: auto;}
 		  #mc_embed_signup_scroll{margin: 25px;}
 		  #mc_embed_signup .mc-field-group.input-group input[type=checkbox] {
   position: absolute;
