--- a/Getting-Charity-Appeals-Right-Download.html
+++ b/Getting-Charity-Appeals-Right-Download.html
@@ -144,7 +144,7 @@
 				<!-- Main -->
 			<article id="main">
 						<header>
-							<img src="images/Getting Charity Appeals Right - Your 3 Step Guide header image.png" style="border-radius: 1em; margin-bottom: 20px;" width="100%" alt="Getting Charity Appeals Right - Your 3 Step Guide to Download">
+							<img src="images/Getting Charity Appeals Right - Your 3 Step Guide header image.png" style="border-radius: 1em; margin-bottom: 20px;" width="600px" max-width="100%" alt="Getting Charity Appeals Right - Your 3 Step Guide to Download">
 						</header>			
 							
 					
