--- a/Charity-Fundraising-Appeals-3-Step-Guide-to-Avoiding-Breaking-the-Rules-Download.html
+++ b/Charity-Fundraising-Appeals-3-Step-Guide-to-Avoiding-Breaking-the-Rules-Download.html
@@ -28,7 +28,7 @@
   opacity: 0;
 }
 #mc_embed_signup h2 {
-    padding: 30px!important;
+    padding: 30px 0 30px 0!important
 }
 
 #mc_embed_signup .helper_text {
@@ -150,7 +150,7 @@
 					
 						<div id="mc_embed_signup">
 							<form action="https://pdmarfleet.us5.list-manage.com/subscribe/post?u=e4a7773f1bc210b1d28b65ec4&amp;id=4a2894df7a&amp;f_id=00df39eaf0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-								<div id="mc_embed_signup_scroll"><h2>Charity Fundraising Appeals</h2><h2 style="padding:0!important; margin-top:-30px">Your 3-Step Guide to Avoid Breaking the Rules</h2>
+								<div id="mc_embed_signup_scroll"><h2 style="text-transform: uppercase;">Charity Fundraising Appeals</h2><h2 style="padding:0!important; margin-top:-30px">Your 3-Step Guide to Avoid Breaking the Rules</h2>
 									<p>Fill in your details below and you'll be emailed the guide immediately.</p>
 									<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 									<div class="mc-field-group"><label for="mce-FNAME">First Name <span class="asterisk">*</span></label><input type="text" name="FNAME" class="required text" id="mce-FNAME" required="" value=""></div><div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div><div class="mc-field-group input-group"><strong>What other charity finance training would you like to get? </strong><ul><li><input type="checkbox" name="group[12569][1]" id="mce-group[12569]-12569-0" value=""><label for="mce-group[12569]-12569-0">Basic Charity Bookkeeping Skills</label></li><li><input type="checkbox" name="group[12569][64]" id="mce-group[12569]-12569-1" value=""><label for="mce-group[12569]-12569-1">Fundamentals of Charity Accounting</label></li><li><input type="checkbox" name="group[12569][512]" id="mce-group[12569]-12569-2" value=""><label for="mce-group[12569]-12569-2">Preparing Charity Budgets for Trustees</label></li><li><input type="checkbox" name="group[12569][1024]" id="mce-group[12569]-12569-3" value=""><label for="mce-group[12569]-12569-3">Charity Finance Pitfalls to Avoid</label></li><li><input type="checkbox" name="group[12569][4194304]" id="mce-group[12569]-12569-4" value=""><label for="mce-group[12569]-12569-4">Charity Finance and Policy Advice</label></li></ul><span id="mce-group[12569]-HELPERTEXT" class="helper_text">I will only send you training that is of interest - no spam!</span></div>
