--- a/index.html
+++ b/index.html
@@ -348,6 +348,33 @@
 				</div>
 			</div>
 			<!-- Item6 Ends -->
+
+			<!-- Item7 Starts - JC01 Will -->
+			<div class="item testimonial-card">
+				<main class="test-card-body">
+					<div class="quote">
+						<i class="fa fa-quote-left"></i>
+						<h2>...the whole progress incredibly simple and smooth!</h2>
+					</div>
+					<div class="ratings">
+						<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+					</div>
+					<p>Pete helped us to migrate to Expenses Plus and it made the whole progress incredibly simple and smooth, I couldn't recommend him highly enough.</p>
+					<div class="quote">
+						<i class="fa fa-quote-right" style="margin-left: auto;"></i>
+					</div>
+				</main>
+				<div class="profile">
+					<div class="profile-image">
+						<img src="images/expenseplus-review-JubileePlus-Will.jpg">
+					</div>
+					<div class="profile-desc">
+						<span>Will Pearce</span>
+						<span>Finance Manager, Jubilee+</span>
+					</div>
+				</div>
+			</div>
+			<!-- Item7 Ends -->
     </div>
 	<!-- Owl Carousel Slider Ends -->
 
