--- a/index.html
+++ b/index.html
@@ -375,6 +375,29 @@
 				</div>
 			</div>
 			<!-- Item7 Ends -->
+	<!-- Item 8 Starts - JC01-Elizabeth -->
+<div class="item testimonial-card">
+	<main class="test-card-body">
+		<div class="quote">
+			<i class="fa fa-quote-left"></i>
+			<h2>The smoothest transition we could have hoped for!</h2>
+		</div>
+		<p>Our church has recently engaged Pete's services in his Migration Package to help us switch accounting software.  He seems to be the expert on ExpensePlus.  This, added to his expertise in charity accounting in general, has made for the smoothest transition we could have hoped for. The ongoing support he offered in his SupportPlus Package has been invaluable and it’s certainly had a positive impact on our church. I highly recommend PD Marfleet Accounting to any charity!</p>
+		<div class="ratings">
+			<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+		 </div>
+	</main>
+	<div class="profile">
+		<div class="profile-image">
+			<img src="images/ExpensePlus-Review-Elizabeth Crump Jubilee Church.jpg">
+		</div>
+		<div class="profile-desc">
+			<span>Elizabeth Crump</span>
+			<span>Trustee, Jubilee Church Derby</span>
+		</div>
+	</div>
+</div>
+<!-- Item 8 Ends -->
     </div>
 	<!-- Owl Carousel Slider Ends -->
 
