--- a/index.html
+++ b/index.html
@@ -387,6 +387,9 @@
 			<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
 		 </div>
 	</main>
+	<div class="quote">
+		<i class="fa fa-quote-right" style="margin-left: auto;"></i>
+	</div>
 	<div class="profile">
 		<div class="profile-image">
 			<img src="images/ExpensePlus-Review-Elizabeth Crump Jubilee Church.jpg">
