--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<div class="inner">
 			<header class="major">
 				<h2>WELCOME<br /></h2>
-				<p>I’m Pete Marfleet. I help charities streamline their finances.</p>
+				<p>I’m Pete Marfleet. We help charities streamline their finances.</p>
 				<img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
 				<p> My business provides cost-effective, outsourced bookkeeping services to charities, churches and non-profits, along with advice, support and training packages for organisations seeking to upgrade their accounting processes.</p>
 			</header>
@@ -103,7 +103,7 @@
 		<section class="spotlight">
 			<div class="image"><img src="images/ExpensePlus-Bookkeeping-package.jpg" alt="" /></div><div class="content">
 				<h2>OUTSOURCED BOOKKEEPING<br /></h2>
-				<p style="text-align: center;">Save your organisation time and money by outsourcing your bookkeeping to me via the <a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> cloud accounting software.</p>
+				<p style="text-align: center;">Save your organisation time and money by outsourcing your bookkeeping to us via the <a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> cloud accounting software.</p>
 				<div class="center-button">
 					<a href="bookkeeping.html" class="button fit">Find Out More</a>
 				</div>
@@ -124,8 +124,8 @@
 			<div class="video"><iframe class="YT-video" src="https://www.youtube.com/embed/zbLkB6dutWg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 			<div class="content">
 				<h2>EXPENSEPLUS<br /></h2>
-				<p style="text-align: center;">Whether your charity is big or small, ExpensePlus' cloud-based fund accounting software can save you time and money. As a verified ExpensePlus bookkeeper and consultant, my services require your organisation to either already be using ExpensePlus or be willing to migrate to their system, <a href="https://pdmarfleet.co.uk/training-support/#migration">which I can help you with</a>. 
-					I am not employed by ExpensePlus, but have extensive user experience with their product. I enjoy a great working relationship with their team and strongly support <a href="https://expenseplus.co.uk/">the excellent work they do</a> in helping churches and charities manage their finances.</p>
+				<p style="text-align: center;">Whether your charity is big or small, ExpensePlus' cloud-based fund accounting software can save you time and money. As a verified ExpensePlus bookkeeper and consultant business, our services require your organisation to either already be using ExpensePlus or be willing to migrate to their system, <a href="https://pdmarfleet.co.uk/training-support/#migration">which we can help you with</a>. 
+					We am not part of ExpensePlus, but have extensive user experience with their product. We enjoy a great working relationship with their team and strongly support <a href="https://expenseplus.co.uk/">the excellent work they do</a> in helping churches and charities manage their finances.</p>
 				</div>
 		</section>
 	</section>	
@@ -135,7 +135,8 @@
 		<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto;" src="images/A2-Website PM headshot - BJC_Hope_Church-000097.jpg" alt="" /></div>
 			<div class="content">
 				<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
-				<h2>MORE ABOUT ME<br /></h2>
+				<h1>THE TEAM<br /></h1>
+				<h2>Pete Marfleet</h2>
 				<p style="text-align: center;">I have worked in the charity sector as a finance officer for almost a decade, gaining extensive experience in fund accounting and charity finance regulations as a result. I have also served on a leadership team of a church for over 8 years, so I understand the unique challenges of managing medium sized charity accounts, often with only a small or volunteer team.</p>
 
 				<p style="text-align: center;">Over the years that I’ve worked in this sector, it’s been clear that many third sector organisations grow to a point where they are too large to run their own finances off a spreadsheet anymore, but still way too small to be able to justify a staffed finance team with the relevant experience. For some, they find a volunteer who has both the experience and time to give to them, an ideal but increasingly rare solution.</p>
@@ -143,6 +144,16 @@
 				<p style="text-align: center;">For those without that option, I'm pleased to be able to offer charities a cost effective alternative to in-house finance experts.</p>
 			</div>
 		</section>
+		<!-- About Staff -->
+		<section class="spotlight">
+			<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto;" src="/images/Esther-Davy-headshot.jpg" alt="" /></div>
+				<div class="content">
+					<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
+					<h2>Esther Davy<br /></h2>
+					<p style="text-align: center;">Esther joined the team in September 2024 and it's so good to have her join the team. With a background as a qualified mathsteacher, she not only is great with numbers and know her way round ExpensePlus, but also understands the charity sector because she still works in it!  Esther works for us part time, focused primarily on delivering expert bookkeeping support to our clients.</p>
+					
+				</div>
+			</section>
 	</section>
 
 				
