--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
 		<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto;" src="images/A2-Website PM headshot - BJC_Hope_Church-000097.jpg" alt="" /></div>
 			<div class="content">
 				<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
-				<h1>THE TEAM<br /></h1>
+				<header class="major">
+					<h2 style="text-transform: uppercase; color: white;">What Clients Say</h2>
+				</header>
+				
 				<h2>Pete Marfleet</h2>
 				<p style="text-align: center;">I have worked in the charity sector as a finance officer for almost a decade, gaining extensive experience in fund accounting and charity finance regulations as a result. I have also served on a leadership team of a church for over 8 years, so I understand the unique challenges of managing medium sized charity accounts, often with only a small or volunteer team.</p>
 
