--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			<div class="content">
 				<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
 				<header class="major">
-					<h2 style="text-transform: uppercase; color: white;">What Clients Say</h2>
+					<h2 style="text-transform: uppercase; color: white; text-align: center;">Meet the team</h2>
 				</header>
 				
 				<h2>Pete Marfleet</h2>
