--- a/index.html
+++ b/index.html
@@ -125,20 +125,19 @@
 			<div class="content">
 				<h2>EXPENSEPLUS<br /></h2>
 				<p style="text-align: center;">Whether your charity is big or small, ExpensePlus' cloud-based fund accounting software can save you time and money. As a verified ExpensePlus bookkeeper and consultant business, our services require your organisation to either already be using ExpensePlus or be willing to migrate to their system, <a href="https://pdmarfleet.co.uk/training-support/#migration">which we can help you with</a>. 
-					We am not part of ExpensePlus, but have extensive user experience with their product. We enjoy a great working relationship with their team and strongly support <a href="https://expenseplus.co.uk/">the excellent work they do</a> in helping churches and charities manage their finances.</p>
+					We are not part of ExpensePlus, but have extensive user experience with their product. We enjoy a great working relationship with their team and strongly support <a href="https://expenseplus.co.uk/">the excellent work they do</a> in helping churches and charities manage their finances.</p>
 				</div>
 		</section>
 	</section>	
 	<!-- About Me -->
 	<section id="AboutMe" style="margin-top:-200px; margin-bottom: 200px" class="wrapper alt style2"></section>
 		<section class="spotlight">
-		<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto;" src="images/A2-Website PM headshot - BJC_Hope_Church-000097.jpg" alt="" /></div>
+			
+		<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto; margin-top:120px" src="images/A2-Website PM headshot - BJC_Hope_Church-000097.jpg" alt="" /></div>
 			<div class="content">
-				<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
-				<header class="major">
+				<header class="major" style="text-align: center; margin-bottom:0px">
 					<h2 style="text-transform: uppercase; color: white; text-align: center;">Meet the team</h2>
-				</header>
-				
+			</header>		
 				<h2>Pete Marfleet</h2>
 				<p style="text-align: center;">I have worked in the charity sector as a finance officer for almost a decade, gaining extensive experience in fund accounting and charity finance regulations as a result. I have also served on a leadership team of a church for over 8 years, so I understand the unique challenges of managing medium sized charity accounts, often with only a small or volunteer team.</p>
 
@@ -149,11 +148,11 @@
 		</section>
 		<!-- About Staff -->
 		<section class="spotlight">
-			<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto;" src="/images/Esther-Davy-headshot.jpg" alt="" /></div>
+			<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto;" src="images/Esther-Davy-headshot.jpg" alt="" /></div>
 				<div class="content">
 					<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
 					<h2>Esther Davy<br /></h2>
-					<p style="text-align: center;">Esther joined the team in September 2024 and it's so good to have her join the team. With a background as a qualified mathsteacher, she not only is great with numbers and know her way round ExpensePlus, but also understands the charity sector because she still works in it!  Esther works for us part time, focused primarily on delivering expert bookkeeping support to our clients.</p>
+					<p style="text-align: center;">Esther joined me in September 2024. With a background as a qualified maths teacher, she is not only great with numbers and knows her way around ExpensePlus, but also understands the charity sector because she still works in it. Esther is a part-time member of staff, focusing primarily on delivering expert bookkeeping support to our clients. As one of Esther's references told me, “her exemplary character, unwavering honesty, and exceptional professionalism make her ideal for roles involving confidential data and charity finances. Her strong ethical standards ensure that sensitive information is handled with the utmost care, while her financial skills consistently contribute to effective financial operations.” It’s great to have Esther as part of the team here.</p>
 					
 				</div>
 			</section>
