--- a/Resources.html
+++ b/Resources.html
@@ -83,7 +83,7 @@
 				<section id="one" class="wrapper style1 special" style="padding: 2.5em 0 1em 0!important;">
 					<div class="inner">
 						<header class="major">
-								<p>If you're a charity bookkeeper looking to enhance your understanding of how to effectively manage your charity accounts in compliance with Charity Commission legislation, you'll find a variety of blogs below that I've written for your benefit.</p>
+								<p>If you're a charity bookkeeper looking to enhance your understanding of how to effectively manage your charity accounts in compliance with Charity Commission legislation, you'll find a variety of blogs below that we've written for your benefit.</p>
 							</div>	
 							</header>		
 						</div>
