--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 				<p style="text-align: center;">For those without that option, I'm pleased to be able to offer charities a cost effective alternative to in-house finance experts.</p>
 			</div>
 		</section>
-		
+	<!--staff goe here-->	 
 	</section>
 
 				
