--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<h2>WELCOME<br /></h2>
 				<p>I’m Pete Marfleet. My business helps charities streamline their finances.</p>
 				<img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
-				<p> My business provides cost-effective, outsourced bookkeeping services to charities, churches and non-profits, along with advice, support and training packages for organisations seeking to upgrade their accounting processes.</p>
+				<p> We provide cost-effective, outsourced bookkeeping services to charities, churches and non-profits, along with advice, support and training packages for organisations seeking to upgrade their accounting processes.</p>
 			</header>
 		</div>
 	</section>
