--- a/Charity-Fundraising-Appeals-3-Step-Guide-to-Avoiding-Breaking-the-Rules-Download.html
+++ b/Charity-Fundraising-Appeals-3-Step-Guide-to-Avoiding-Breaking-the-Rules-Download.html
@@ -19,7 +19,7 @@
 <!--MailChimp signup form styling-->
 
 	<div id="mc_embed_shell">
-		<link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+		<link href="//pdmarfleetaccounting.sharepoint.com///cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
 	<style type="text/css">
 		  #mc_embed_signup{background:#218ea6; false;clear:left; width: 650px; max-width: 100%;display: block;margin: auto;}
 		  #mc_embed_signup_scroll{margin: 25px;}
@@ -172,7 +172,7 @@
 							</div>
 						</form>
 						</div>
-						<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
+						<script type="text/javascript" src="//pdmarfleetaccounting.sharepoint.com///s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
 						
 				</section>	
 			</article>
