--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 				<main class="test-card-body">
 					<div class="quote">
 						<i class="fa fa-quote-left"></i>
-						<h2>Highly Recommended</h2>
+						<h2>Highly recommended</h2>
 					</div>
 					<div class="ratings">
 						<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
@@ -205,7 +205,7 @@
 				<main class="test-card-body">
 					<div class="quote">
 						<i class="fa fa-quote-left"></i>
-						<h2>We're Delighted! </h2>
+						<h2>We're delighted! </h2>
 					</div>
 					<div class="ratings">
 						<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
@@ -232,7 +232,7 @@
 				<main class="test-card-body">
 					<div class="quote">
 						<i class="fa fa-quote-left"></i>
-						<h2>Super Helpful</h2>
+						<h2>Super helpful</h2>
 					</div>
 					<div class="ratings">
 						<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
@@ -313,7 +313,7 @@
 				<main class="test-card-body">
 					<div class="quote">
 						<i class="fa fa-quote-left"></i>
-						<h2>Excellent and Thorough</h2>
+						<h2>Excellent and thorough</h2>
 					</div>
 					<div class="ratings">
 						<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
@@ -367,7 +367,7 @@
 				<main class="test-card-body">
 					<div class="quote">
 						<i class="fa fa-quote-left"></i>
-						<h2>...the whole progress incredibly simple and smooth!</h2>
+						<h2>...the whole progress was incredibly simple and smooth!</h2>
 					</div>
 					<div class="ratings">
 						<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
@@ -398,7 +398,7 @@
 		<div class="ratings">
 			<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
 		 </div>
-		<p>Our church has recently engaged Pete's services in his Migration Package to help us switch accounting software.  He seems to be the expert on ExpensePlus.  This, added to his expertise in charity accounting in general, has made for the smoothest transition we could have hoped for. The ongoing support he offered in his SupportPlus Package has been invaluable and it’s certainly had a positive impact on our church. I highly recommend PD Marfleet Accounting to any charity!</p>
+		<p>Our church has recently engaged Pete's services in his Migration Package to help us switch accounting software. He seems to be the expert on ExpensePlus.  This, added to his expertise in charity accounting in general, has made for the smoothest transition we could have hoped for. The ongoing support he offered in his SupportPlus Package has been invaluable and it’s certainly had a positive impact on our church. I highly recommend PD Marfleet Accounting to any charity!</p>
 	<div class="quote">
 		<i class="fa fa-quote-right" style="margin-left: auto;"></i>
 	</div>
