--- a/Training-Support.html
+++ b/Training-Support.html
@@ -99,7 +99,7 @@
 									<header class="package">
 									<h3>Support Package</h3>
 									</header>
-									<p>from £250 per day</p>
+									<p>from £440 per day</p>
 									<p>With this option, we’ll put together a custom support package based on the specific training and support you need using ExpensePlus.</p>
 									<p>For example, it could vary from a 2 hour session with one of us to help your bookkeeper understand the basics of managing your accounts in ExpensePlus, or 1/2 a day training online for your wider team or a full day consulting on your fund architecture. It really is up to you to say how we can help.</p>
 									<a class="button" href="#popup1">Click for Prices</a>
@@ -117,16 +117,16 @@
 														<ul class="package-price" sytle="text-align:centre"> 
 																<li>
 																	<p style="margin:0!important;">​Charity income under £250k:</p>
-																	<p style="margin:0!important;">£250 - £350 per day</p>
+																	<p style="margin:0!important;">£440 per day</p>
 																</li>
 																<li>
 																	<p style="margin:0!important;">​Charity income over £250k:</p>
-																	<p style="margin:0!important;">£350 - £450 per day</p>
+																	<p style="margin:0!important;">£540 per day</p>
 																</li>
 																					
 																<li>
 																	<p style="margin:0!important;">​Charity income over £1M: </p>
-																	<p style="margin:0!important;">£450 - £550 per day</p>	
+																	<p style="margin:0!important;">£640 per day</p>	
 																</li>
 																<li>
 																	<p style="margin:0!important;">​For charities under £50k:</p>
