--- a/Training-Support.html
+++ b/Training-Support.html
@@ -223,7 +223,7 @@
 									<header class="package">
 									<h3>Migration Package</h3>
 									</header>
-									<p>from £850</p>
+									<p>from £880</p>
 									<p>If your organisation is considering migrating to ExpensePlus, the idea of switching to a new system may feel a bit daunting.</p>
 									<p style="margin-bottom:3.5em!important">To help ease the transition, we offer a custom support and training package specifically for charities who would appreciate more in-depth assistance in moving to ExpensePlus as quickly and efficiently as possible.</p></br>				
 									<a class="button" href="#popup2">Click for Prices</a>
@@ -243,7 +243,7 @@
 												<ul class="package-price" sytle="text-align:centre"> 
 														<li>
 															<p style="margin:0!important;">​Charity income under £250k:</p>
-															<p style="margin:0!important;">£880 - £1,100</p>
+															<p style="margin:0!important;">from £880</p>
 														</li>
 														<li>
 															<p style="margin:0!important;">​Charity income over £250k:</p>
