--- a/Contact.html
+++ b/Contact.html
@@ -83,7 +83,7 @@
 				<section id="one" class="wrapper style1 special">
 					<div class="inner">
 						<header class="major">
-							<p class="icon solid fa-envelope"><span class="label"></span></a><a href="mailto: pete@pdmarfleet.co.uk" style="text-decoration: none;">  pete@pdmarfleet.co.uk</a></p>
+							<p class="icon solid fa-envelope"><span class="label"></span></a><a href="redirect-mailto.php" style="text-decoration: none;"> email here</a></p>
 							<p class="icon solid fa-phone"><span class="label"></span></a><a href="tel: 07398906234"style="text-decoration: none;">  07398906234</a></p>
 							<a href="https://www.linkedin.com/in/pdmarfleet/" class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/pdmarfleet/"style="text-decoration: none;"> pdmarfleet</a></p>
 							
