--- a/Training-Support.html
+++ b/Training-Support.html
@@ -336,7 +336,7 @@
 						<li><a href="https://www.youtube.com/channel/UCqJYofgfzYFe4UBMwhNAnZg" class="icon brands fa-youtube"><span class="label"></span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; PD Marfleet 2023</li><li><a href="policies.html">Policies</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; PD Marfleet 2023</li><li><a href="Privacy.html">Policies</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
