--- a/Privacy.html
+++ b/Privacy.html
@@ -91,7 +91,7 @@
 								<p>We take privacy seriously. When handling Personal Information, we comply with Applicable Privacy Laws, including (as applicable) the UK Data Protection Act 2018 (DPA), the United Kingdom General Data Protection Regulation (UK GDPR), and the General Data Protection Regulation (EU) 2016/679 (EU GDPR).</p>
 								
 								<h2>Who We Are</h2>
-								<p>PD Marfleet Accounting is a company registered in the United Kingdom. If you have any questions about this Privacy Policy, you can contact us at:</p>
+								<p>PD Marfleet Accounting is a sole trader registered in the United Kingdom. If you have any questions about this Privacy Policy, you can contact us at:</p>
 								<p><strong>Email:</strong> <a href="https://pdmarfleet.co.uk/contact">https://pdmarfleet.co.uk/contact</a></p>
 								
 								<p><strong>Data Protection Officer (DPO):</strong><br>
