--- a/Resources.html
+++ b/Resources.html
@@ -138,7 +138,7 @@
 						<li><a href="https://www.youtube.com/channel/UCqJYofgfzYFe4UBMwhNAnZg" class="icon brands fa-youtube"><span class="label"></span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; PD Marfleet 2023</li><li><a href="Privacy.html">Policies</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; PD Marfleet 2023</li><li><a href="Privacy.html">Privacy Policy</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
