--- a/Training-Support.html
+++ b/Training-Support.html
@@ -153,9 +153,9 @@
 									<header class="package">
 									<h3>Support<span style="color: #ffcd00;font-weight: 900;">Plus</span> Package</h3>
 									</header>
-									<p>from £130 per month</p>
+									<p>from £150 per month</p>
 									<p>This option is for organisations who have a volunteer bookkeeper and are already using ExpensePlus, but would appreciate expert ongoing support.</p>
-									<p>The package is based on a 30-day rolling contract and includes weekly audits of your bookkeeping, feedback to quickly catch any adjustments, priority email support for questions related to using ExpensePlus, as well as advice for your trustees on financial best practices and good governance.</p>
+									<p>The package is based on a 30-day rolling contract and includes unlimited email and zoom support for questions related to using ExpensePlus, as well as advice for your trustees on financial best practices and good governance.</p>
 									<a class="button" href="#popup3">Click for Prices</a>
 																
 									<div id="popup3" class="overlay">
@@ -171,16 +171,16 @@
 														<ul class="package-price" sytle="text-align:centre"> 
 																<li>
 																	<p style="margin:0!important;">​Charity income under £250k:</p>
-																	<p style="margin:0!important;">£130 - £180 per month</p>
+																	<p style="margin:0!important;">£150 - £195 per month</p>
 																</li>
 																<li>
 																	<p style="margin:0!important;">​Charity income over £250k:</p>
-																	<p style="margin:0!important;">£180 - £225 per month</p>
+																	<p style="margin:0!important;">£200 - £490 per month</p>
 																</li>
 																					
 																<li>
 																	<p style="margin:0!important;">​Charity income over £1M: </p>
-																	<p style="margin:0!important;">£225 - £295 per month</p>	
+																	<p style="margin:0!important;">£495+ per month</p>	
 																</li>
 																<li>
 																	<p style="margin:0!important;">​For charities under £50k:</p>
