--- a/Training-Support.html
+++ b/Training-Support.html
@@ -155,7 +155,10 @@
 									</header>
 									<p>from £150 per month</p>
 									<p>This option is for organisations who have a volunteer bookkeeper and are already using ExpensePlus, but would appreciate expert ongoing support.</p>
-									<p>The package is based on a 30-day rolling contract and includes unlimited email and zoom support for questions related to using ExpensePlus, as well as advice for your trustees on financial best practices and good governance.</p>
+									<p><p>
+									This package offered on a 30-day rolling contract. It includes unlimited<sup>*</sup> email and Zoom support for questions related to using ExpensePlus, along with advice for your trustees on financial best practices and good financial governance.</p>
+									<p>With access to your ExpensePlus account via the ‘external bookkeeper’ system setting, we can provide detailed support and tailored mentoring to you, helping you resolve queries more effectively and build confidence in your financial processes.</p>
+									<p><small><sup>*</sup>Fair usage policy applies to ensure support remains focused and sustainable.</small></p></p>
 									<a class="button" href="#popup3">Click for Prices</a>
 									<div id="popup3" class="overlay">
 										<div class="popup">
