--- a/Training-Support.html
+++ b/Training-Support.html
@@ -154,10 +154,9 @@
 									<h3>Support<span style="color: #ffcd00;font-weight: 900;">Plus</span> Package</h3>
 									</header>
 									<p>from £150 per month</p>
-									<p>This option is for organisations who have a volunteer bookkeeper and are already using ExpensePlus, but would appreciate expert ongoing support.</p>
-									<p><p>
-									This package offered on a 30-day rolling contract. It includes unlimited<sup>*</sup> email and Zoom support for questions related to using ExpensePlus, along with advice for your trustees on financial best practices and good financial governance.</p>
-									<p>With access to your ExpensePlus account via the ‘external bookkeeper’ system setting, we can provide detailed support and tailored mentoring to you, helping you resolve queries more effectively and build confidence in your financial processes.</p>
+									<p>This option is for organisations who have a volunteer bookkeeper and are already using ExpensePlus, but would appreciate ongoing mentoring support.</p>
+									<p>It is offered on a 30-day rolling contract and includes unlimited<sup>*</sup> email and Zoom support for questions related to using ExpensePlus, along with advice for your trustees on financial best practices and good financial governance if needed.</p>
+									<p>With access to your ExpensePlus account via the ‘external bookkeeper’ system setting, we can provide detailed support and tailored mentoring to you as a bookkeeper, helping you resolve queries more effectively and build confidence in your financial processes.</p>
 									<p><small><sup>*</sup>Fair usage policy applies to ensure support remains focused and sustainable.</small></p></p>
 									<a class="button" href="#popup3">Click for Prices</a>
 									<div id="popup3" class="overlay">
