--- a/Training-Support.html
+++ b/Training-Support.html
@@ -158,8 +158,8 @@
 									<p><p>
 									This package offered on a 30-day rolling contract. It includes unlimited<sup>*</sup> email and Zoom support for questions related to using ExpensePlus, along with advice for your trustees on financial best practices and good financial governance.</p>
 									<p>With access to your ExpensePlus account via the ‘external bookkeeper’ system setting, we can provide detailed support and tailored mentoring to you, helping you resolve queries more effectively and build confidence in your financial processes.</p>
-									<p><small><sup>*</sup>Fair usage policy applies to ensure support remains focused and sustainable.</small></p></p>
 									<a class="button" href="#popup3">Click for Prices</a>
+									<p style="font-size:11px"><sup>*</sup>Fair usage policy applies to ensure support remains focused and sustainable.</p>
 									<div id="popup3" class="overlay">
 										<div class="popup">
 											<h2>Support<span style="color: #ffcd00;font-weight: 900;">Plus</span> Package</h2>
